--- a/HW1.Rmd
+++ b/HW1.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "STA521 HW1"
-author: '[Your Name Here and netid]'
-date: "Due Wednesday September 6, 2019"
+author: '[Fan Zhu | netid: fz63]'
+date: "Due August 28th, 2020"
 output:
   pdf_document: default
 ---
@@ -9,6 +9,9 @@ output:
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 library(ISLR)
+library(knitr)
+library(GGally)
+library(dplyr)
 # add other libraries here
 ```
 
@@ -22,25 +25,35 @@ data(Auto)
 1. Create a summary of the data.  How many variables have missing data?
 
 ```{r}
-
+summary(Auto)
+colSums(is.na(Auto))
+#None of the variables has missing data.
 ```
 
 
 2.  Which of the predictors are quantitative, and which are qualitative?
 ```{r}
+help(Auto)
+#Quantitative: mpg, cylinders, displacement, horsepower, weight, acceleration and year.
 
+#Qualitative: origin and name
+
+#Note that the variables "cylinders" and "year" can, technically, also be treated as qualitative variable but I take them as quantitative variables here.
 ```
 
 3. What is the range of each quantitative predictor? You can answer this using the `range()` function.   Create a table with variable name, min, max with one row per variable.   `kable` from the package `knitr` can display tables nicely.
 
 ```{r}
-
+ranges_Auto <- t(rbind(range(Auto$mpg),range(Auto$cylinders),range(Auto$displacement),range(Auto$horsepower),range(Auto$weight),range(Auto$acceleration), range(Auto$year)))
+rownames(ranges_Auto) <- c("Min","Max")
+knitr::kable(ranges_Auto, "pipe", 
+             col.names = c("mpg", "cylinders","displacement", "horsepower", "weight", "acceleration","year"))
 ```
 
 4. What is the mean and standard deviation of each quantitative predictor?  _Format nicely in a table as above_
 
 ```{r}
-
+centers <- c(mean)
 ```
 
 
