--- a/HW1.Rmd
+++ b/HW1.Rmd
@@ -24,7 +24,7 @@ data(Auto)
 ## Exploratory Data Analysis
 1. Create a summary of the data.  How many variables have missing data?
 
-```{r}
+```{r Exercise#1}
 summary(Auto)
 colSums(is.na(Auto))
 #None of the variables has missing data.
@@ -32,7 +32,7 @@ colSums(is.na(Auto))
 
 
 2.  Which of the predictors are quantitative, and which are qualitative?
-```{r}
+```{r Exercise#2}
 help(Auto)
 #Quantitative: mpg, cylinders, displacement, horsepower, weight, acceleration and year.
 
@@ -43,7 +43,7 @@ help(Auto)
 
 3. What is the range of each quantitative predictor? You can answer this using the `range()` function.   Create a table with variable name, min, max with one row per variable.   `kable` from the package `knitr` can display tables nicely.
 
-```{r}
+```{r Exercise#3}
 ranges_Auto <- t(rbind(range(Auto$mpg),range(Auto$cylinders),range(Auto$displacement),range(Auto$horsepower),range(Auto$weight),range(Auto$acceleration), range(Auto$year)))
 rownames(ranges_Auto) <- c("Min","Max")
 knitr::kable(ranges_Auto, "pipe", 
@@ -52,21 +52,24 @@ knitr::kable(ranges_Auto, "pipe",
 
 4. What is the mean and standard deviation of each quantitative predictor?  _Format nicely in a table as above_
 
-```{r}
-centers <- c(mean)
+```{r Exercise#4}
+centers_Auto <- rbind(c(mean(Auto$mpg),mean(Auto$cylinders),mean(Auto$displacement),mean(Auto$horsepower),mean(Auto$weight),mean(Auto$acceleration), mean(Auto$year)),c(sd(Auto$mpg),sd(Auto$cylinders),sd(Auto$displacement),sd(Auto$horsepower),sd(Auto$weight),sd(Auto$acceleration), sd(Auto$year)))
+rownames(centers_Auto) <- c("Mean","SD")
+knitr::kable(centers_Auto, "pipe", 
+             col.names = c("mpg", "cylinders","displacement", "horsepower", "weight", "acceleration","year"))
 ```
 
 
 5. Investigate the predictors graphically, using scatterplot matrices  (`ggpairs`) and other tools of your choice. Create some plots
 highlighting the relationships among the predictors. Comment
 on your findings.  _Try adding a caption to your figure_
-```{r}
+```{r Exercise#5}
 
 ```
 
 6. Suppose that we wish to predict gas mileage (mpg) on the basis of the other variables using regression. Do your plots suggest that any of the other variables might be useful in predicting mpg using linear regression? Justify your answer.
 
-```{r}
+```{r Exercise#6}
 
 ```
 
@@ -87,15 +90,19 @@ positive or negative?
     (e) What is the predicted mpg associated with a horsepower of
 98? What are the associated 95% confidence and prediction
 intervals?   (see `help(predict)`) Provide interpretations of these for the car dealer.
+```{r Exercise#7}
+
+```
+
 
 8. Plot the response and the predictor using `ggplot`.  Add to the plot a line showing the least squares regression line. 
-```{r}
+```{r Exercise#8}
 
 ```
 
 9. Use the `plot()` function to produce diagnostic plots of the least squares regression fit. Comment on any problems you see with the model regarding assumptions for using a simple linear regression.  
 
-```{r}
+```{r Exercise#9}
 
 ```
 
@@ -106,6 +113,9 @@ intervals?   (see `help(predict)`) Provide interpretations of these for the car 
 10. Show that the  regression function $E(Y \mid x) = f(x)$ is the optimal 
 optimal predictor of $Y$ given $X = x$ using squared error loss:  that is $f(x)$
 minimizes $E[(Y - g(x))^2 \mid X =x]$ over all functions $g(x)$ at all points $X=x$.   _Hint:  there are at least two ways to do this.   Differentiation (so think about how to justify) - or - add and subtract the proposed optimal predictor and who that it must minimize the function._
+
+
+
 
 11. (adopted from ELS Ex 2.7 ) Suppose that we have a sample of $N$ pairs $x_i, y_i$ drwan iid from the distribution characterized as follows 
 $$ x_i \sim h(x), \text{ the design distribution}$$
