--- a/HW1.Rmd
+++ b/HW1.Rmd
@@ -16,12 +16,13 @@ library(knitr)
 library(GGally)
 library(dplyr)
 options(tinytex.verbose = TRUE)
-# add other libraries here
+# set knit options and loaded libraries
 ```
 
 This exercise involves the Auto data set from ISLR.  Load the data and answer the following questions adding your code in the code chunks. Please submit a pdf version to Sakai.  For full credit, you should push your final Rmd file to your github repo on the STA521-F19 organization site by the deadline  (the version that is submitted on Sakai will be graded)
 
 ```{r data, echo=F}
+#load the "Auto" data
 data(Auto)
 ```
 
@@ -75,10 +76,26 @@ knitr::kable(centers_Auto, "pipe", caption = "Table2: Central Tendencies for the
 
 5. Investigate the predictors graphically, using scatterplot matrices  (`ggpairs`) and other tools of your choice. Create some plots highlighting the relationships among the predictors. Comment on your findings. Try adding a caption to your figure
 ```{r Exercise#5}
-#library(ggplot2)
-#ggpairs(Auto[,1:3],title = "Scatterplot Matrices", progress = FALSE)
-#ggpairs(Auto[,c(1,4,5)],title = "Scatterplot Matrices", progress = FALSE)
-#ggpairs(Auto[,c(1,6,7)],title = "Scatterplot Matrices", progress = FALSE)
+#create pairwise comparisons scatterplot mattrices using the "ggpairs" function
+library(ggplot2)
+ggpairs(Auto[,c(1,3,4,5,6)],title = "Pairwise Comparisons of 5 Quantitative Variables", progress = FALSE)
+
+#create a boxplot of MPG for different Auto Origins
+boxplot(mpg~origin,
+data=Auto,
+main="Distribution of MPG for Different Auto Origins",
+xlab="Origin",
+ylab="MPG",
+names=c("American","European","Japanese")
+)
+
+#create a boxplot of MPG for different Auto Years
+boxplot(mpg~year,
+data=Auto,
+main="Distribution of MPG for Different Auto Years",
+xlab="year (19XX)",
+ylab="MPG"
+)
 ```
 
 6. Suppose that we wish to predict gas mileage (mpg) on the basis of the other variables using regression. Do your plots suggest that any of the other variables might be useful in predicting mpg using linear regression? Justify your answer.
@@ -104,29 +121,34 @@ positive or negative?
 intervals?   (see `help(predict)`) Provide interpretations of these for the car dealer.
 
 ```{r Exercise#7}
+#run a regression with mpg as the response and horsepower as the predictor.
 model1 <- lm(mpg ~ horsepower, data = Auto)
 summary(model1)
-predict(model1, newdata = data.frame(horsepower = c(98)), interval = 'confidence')
+#compute the 95% confidence interval given horsepower = 98
+conf_int <-  predict(model1, data.frame(horsepower = 98), interval = "confidence") 
+conf_int
+#compute the 95% prediction interval given horsepower = 98
+pred_int <-  predict(model1, data.frame(horsepower = 98), interval = "prediction")
+pred_int
 ```
 7(a) Yes. There is a relationship between the predictor and the response. The P value for the beta in the regression is smaller than 0.05. Thus, we can reject the null hypothesis that the beta is zero, which means that there is a significant nonzero relationship between teh predictor and the response. 
 7(b) The beta is -0.157845, which means that holding everything else constant, every one unit increase in the horsepower will decrease the mpg by 0.157845. And as we have discussed in 7(a), the beta is significant.
 7(c) The relationship between the predictor and the response is negative because the beta is negative.
 7(d) Holding everything else constant, every one unit increase in the horsepower will decrease the mpg by 0.157845. That is, higher horsepower leads to more fuel consumption (less miles per gallon). There is a trade-off between performance and the car's costs on fuels. 
-7(e) The predicted mpg associated with a horsepower of 98 is 24.46708. The lower bound of the 95% confidence interval is 23.97308 and the upper bound of the interval is 24.96108. We can tell the dealer that with a horsepower of 98, the car would run 24.46708 miles per gallon of gasoline. A more stats-version of the confidence interval is that: if we take the samples repeatedly and computed the 95% confidence interval for each sample, 95% of the intervals would contain the true population mean. 
+7(e) The predicted mpg associated with a horsepower of 98 is 24.46708. We can tell the dealer that with a horsepower of 98, the car would run 24.46708 miles per gallon of gasoline.
+The lower bound of the 95% confidence interval is 23.97308 and the upper bound of the confidence interval is 24.96108. 
+The lower bound of the 95% prediction interval is 14.8094 and the upper bound of the prediction interval is 34.12476.  
+A more stats-version of the confidence interval is that: if we take the samples repeatedly and computed the 95% confidence interval for each sample, 95% of the intervals would contain the true population mean. 
+In other words, we are 95% confidence that the average mpg of a car, whose horsepower is 98, will be between 23.97308 and 24.96108. we are also 95% confident that a predicted/new car with 98 horsepower will have its mpg between 14.8094 and 34.12476.  
 
 
 
 8. Plot the response and the predictor using `ggplot`.  Add to the plot a line showing the least squares regression line. 
 ```{r Exercise#8}
-#library(ggplot2)
-#ggplot(Auto, aes(x = horsepower, y = mpg)) +
-    #geom_point() +
-    #stat_smooth(method = "lm", se = FALSE) +
-    #labs(
-        #title = "Scatterplot between mpg and horsepower with the fitted value"
-         #)
-
+ggplot(Auto, aes(x = horsepower, y = mpg)) + 
+  geom_point() + geom_smooth(method = "lm", formula = y ~ x)
 ```
+
 
 9. Use the `plot()` function to produce diagnostic plots of the least squares regression fit. Comment on any problems you see with the model regarding assumptions for using a simple linear regression.  
 
