--- a/HW1.Rmd
+++ b/HW1.Rmd
@@ -15,6 +15,7 @@ library(ISLR)
 library(knitr)
 library(GGally)
 library(dplyr)
+library(tinytex)
 options(tinytex.verbose = TRUE)
 # set knit options and loaded libraries
 ```
@@ -39,11 +40,11 @@ colSums(is.na(Auto))
 2.  Which of the predictors are quantitative, and which are qualitative?
 ```{r Exercise#2}
 help(Auto)
-#Quantitative: mpg, displacement, horsepower, weight, and acceleration  
-
-#Qualitative: origin, cylinders, year and name
-
 ```
+Quantitative: mpg, displacement, horsepower, weight, and acceleration  
+
+Qualitative: origin, cylinders, year and name
+
 
 3. What is the range of each quantitative predictor? You can answer this using the `range()` function.   Create a table with variable name, min, max with one row per variable.   `kable` from the package `knitr` can display tables nicely.
 
@@ -75,9 +76,10 @@ knitr::kable(centers_Auto, "pipe", caption = "Table2: Central Tendencies for the
 
 
 5. Investigate the predictors graphically, using scatterplot matrices  (`ggpairs`) and other tools of your choice. Create some plots highlighting the relationships among the predictors. Comment on your findings. Try adding a caption to your figure
-```{r Exercise#5}
+```{r Exercise#5, fig.width=8, warning=FALSE, message=FALSE, echo = FALSE}
 #create pairwise comparisons scatterplot mattrices using the "ggpairs" function
 library(ggplot2)
+library(GGally)
 ggpairs(Auto[,c(1,3,4,5,6)],title = "Pairwise Comparisons of 5 Quantitative Variables", progress = FALSE)
 
 #create a boxplot of MPG for different Auto Origins
@@ -96,6 +98,7 @@ main="Distribution of MPG for Different Auto Years",
 xlab="year (19XX)",
 ylab="MPG"
 )
+
 ```
 
 6. Suppose that we wish to predict gas mileage (mpg) on the basis of the other variables using regression. Do your plots suggest that any of the other variables might be useful in predicting mpg using linear regression? Justify your answer.
@@ -153,11 +156,13 @@ ggplot(Auto, aes(x = horsepower, y = mpg)) +
 9. Use the `plot()` function to produce diagnostic plots of the least squares regression fit. Comment on any problems you see with the model regarding assumptions for using a simple linear regression.  
 
 ```{r Exercise#9}
-
+par(mfrow = c(2, 2)) 
+plot(model1)
 ```
+Interpretations on Q9 here.
+
 
 ## Theory
-
 
 
 10. Show that the  regression function $E(Y \mid x) = f(x)$ is the optimal 
