temporarily saved for restarting the R studio.

--- a/HW1.Rmd
+++ b/HW1.Rmd
@@ -16,6 +16,7 @@ library(knitr)
 library(GGally)
 library(dplyr)
 library(tinytex)
+library(tidyverse)
 options(tinytex.verbose = TRUE)
 # set knit options and loaded libraries
 ```
