--- a/HW1.Rmd
+++ b/HW1.Rmd
@@ -174,19 +174,20 @@ In conclusion, from the diagnostics plots above, we can find that the residuals 
 optimal predictor of $Y$ given $X = x$ using squared error loss:  that is $f(x)$
 minimizes $E[(Y - g(x))^2 \mid X =x]$ over all functions $g(x)$ at all points $X=x$.   Hint:  there are at least two ways to do this.   Differentiation (so think about how to justify) - or - add and subtract the proposed optimal predictor and who that it must minimize the function.
 
-$$E[(Y −g(x))^2 |X =x]=E[(Y −f(x)+f(x)−g(x))^2 |X =x]\\
-=E[((Y −f(x))+(f(x)−g(x)))^2 |X =x] \\
-=E[(Y −f(x))^2 +(f(x)−g(x))^2 +2(Y −f(x))(f(x)−g(x))|X =x]\\
-=E[(Y −f(x))^2 |X =x]+E[(f(x)−g(x))^2 |X =x]+E[2(Y −f(x))(f(x)−g(x))|X =x]\\
-((f(x) − g(x))\: \mbox{can be treated as a constant because they are conditional on}\: X=x)\\
-=E[(Y −f(x))^2 |X =x]+(f(x)−g(x))^2 +2(f(x)−g(x))E[Y −f(x)|X =x]\\
-=E[(Y −f(x))^2 |X =x]+(f(x)−g(x))^2 +2(f(x)−g(x))(E(Y |X =x)−f(x))\\
-(Because\:E(Y |X =x)−f(x))\\
-=E[(Y −f(x))^2 |X =x]+(f(x)−g(x))^2 +2(f(x)−g(x))(f(x)−f(x))\\
-=E[(Y −f(x))^2 |X =x]+(f(x)−g(x))^2\\
-≥ E[(Y − f(x))^2 | X = x]
-$$
-Based on the abovementioned calculation, we can deduce that $E[(Y −g(x))^2 |X =x] = E[(Y − f(x))^2 | X = x]$ only if $f(x)=g(x)\:∀x$. Thus, we can conclude that $f(x)$ minimizes $E[(Y −g(x))^2 |X =x]$ over all functions $g(x)$ at all points $X = x$.
+$$E[(Y -g(x))^2 \mid X =x]=E[(Y -f(x)+f(x)-g(x))^2 \mid X =x]$$
+$$=E[((Y -f(x))+(f(x)-g(x)))^2 \mid X =x]$$
+$$=E[(Y -f(x))^2 +(f(x)-g(x))^2 +2(Y -f(x))(f(x)-g(x))\mid X =x]$$
+$$=E[(Y -f(x))^2 \mid X =x]+E[(f(x)-g(x))^2 \mid X =x]+E[2(Y -f(x))(f(x)-g(x))\mid X =x]$$
+$$((f(x) - g(x))\: \text{can be treated as a constant because they are conditional on}\: X=x)$$
+$$=E[(Y -f(x))^2  \mid X =x]+(f(x)-g(x))^2 +2(f(x)-g(x))E[Y -f(x)\mid X =x]$$
+$$=E[(Y -f(x))^2 \mid X =x]+(f(x)-g(x))^2 +2(f(x)-g(x))(E(Y \mid X =x)-f(x))$$
+$$(Because\:E(Y \mid X =x)-f(x))$$
+$$=E[(Y -f(x))^2 \mid X =x]+(f(x)-g(x))^2 +2(f(x)-g(x))(f(x)-f(x))$$
+$$=E[(Y -f(x))^2 \mid X =x]+(f(x)-g(x))^2$$
+$$\small  \geq E[(Y - f(x))^2 \mid X = x]$$
+
+
+Based on the abovementioned calculation, we can deduce that $E[(Y -g(x))^2 \mid X =x] = E[(Y - f(x))^2 \mid X = x]$ only if $f(x)=g(x)\:\text{for all}\:x$. Thus, we can conclude that $f(x)$ minimizes $E[(Y -g(x))^2 \mid X =x]$ over all functions $g(x)$ at all points $X = x$.
 
 Citation: Professor Mukherjee taught us this computational trick during this office hour. Thank you.
 
